third_party/rust/pin-project/tests/ui/pinned_drop/pinned-drop-no-attr-arg.stderr
error[E0119]: conflicting implementations of trait `pin_project::__private::PinnedDrop` for type `Foo`:
  --> $DIR/pinned-drop-no-attr-arg.rs:11:1
   |
4  | #[pin_project]
   | -------------- first implementation here
...
11 | impl PinnedDrop for Foo { //~ ERROR E0119
   | ^^^^^^^^^^^^^^^^^^^^^^^ conflicting implementation for `Foo`
